--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="project-card">
           <h3>Project 2 - Fermium Chain</h3>
-          <p>A small prototype of blockchain in evolution.</p>
+          <p>A small prototype of blockchain in evolution. <img src="assets/underc.png" alt=""></p>
           <a href="prjs/project2.html" class="btn-project">Show more</a>
         </div>
         <div class="project-card">
@@ -56,8 +56,18 @@
         </div>
         <div class="project-card">
           <h3>Project 4 - Shelter</h3>
-          <p>An operating system created from scratch.</p>
+          <p>An operating system created from scratch. <img src="assets/underc.png" alt=""></p>
           <a href="prjs/project4.html" class="btn-project">Show more</a>
+        </div>
+        <div class="project-card">
+          <h3>Project 5 - Intel 4004 emulator</h3>
+          <p>The first commercial microprocessor developed by Intel in 1971. <img src="assets/underc.png" alt=""></p>
+          <a href="prjs/project5.html" class="btn-project">Show more</a>
+        </div>
+        <div class="project-card">
+          <h3>Project 6 - Human Life Simulator</h3>
+          <p>A human life simulator for probabilistic and statistical study.</p>
+          <a href="prjs/project6.html" class="btn-project">Show more</a>
         </div>
       </div>
     </section>
