--- a/prjs/project3.html
+++ b/prjs/project3.html
@@ -35,6 +35,6 @@
   <footer class="footer">
     <p>&copy; 2024 - Ivan Toselli</p>
   </footer>
-  <script src="../js/game.js"></script>
+  <script src="../js/BioHoardzard/game.js"></script>
 </body>
 </html>
