--- a/prjs/project4.html
+++ b/prjs/project4.html
@@ -14,7 +14,7 @@
   <main class="project-page">
     <h1>Project 4 - Shelter</h1>
     <p>
-      An operating system created from scratch. I will soon share the link of the project in github. [Work in Progress]
+      An operating system created from scratch. Github link: <a href="https://github.com/FollowGrayBunny/Shelter" style="color: coral;">https://github.com/FollowGrayBunny/Shelter</a>
     </p>
     <div class="project-image">
       <img src="../assets/SHELTER.png" alt="Shelter Beta Version 0.0.1">
